# MarchingCube

./: README.md  pyproject.toml
src/marchingcube/: __init__.py  main.py  viewer.py
