[project]
name = "marchingcube"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mattis Jung", email = "mattis2612@outlook.de" }
]
dependencies = [
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
viewer = "python3 -m src.marchingcube.viewer"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marchingcube"]
